Fixed Title Overflow

--- a/components/Section/Intro/Intro.module.css
+++ b/components/Section/Intro/Intro.module.css
@@ -211,7 +211,7 @@ font-weight: bold;
   .title {
     margin-bottom: 3rem;
     line-height: 1.15;
-    font-size: 4rem;
+    font-size: xx-large;
   }
 
   .imgStyle{
